# brighter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: blank.yml  publish.yml
brighter/: collections.py
brighter/airflow/alerts/: slack.py
brighter/airflow/operators/: bigquery.py
brighter/api/: core.py
brighter/gcp/: bigquery.py  credentials.py  storage.py
